Comentarios no plano cartesiano

--- a/Códigos/produto_cartesiano.ipynb
+++ b/Códigos/produto_cartesiano.ipynb
@@ -45,11 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "123b52db",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Juntei todos os atributos que diziam valor de renda que recebiam no renda\n",
+    "\n",
     "# Ajustando os valores conforme as condições especificadas\n",
     "df['F001021'] = df.apply(lambda x: x['F001021'] if x['F001011'] == 1 else 0, axis=1)\n",
     "df['F007021'] = df.apply(lambda x: x['F007021'] if x['F007011'] == 1 else 0, axis=1)\n",
@@ -62,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "5371348e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropei os atributos usados anteriormente\n",
     "df = df.drop('F001021', axis=1)\n",
     "df = df.drop('F007021', axis=1)\n",
     "df = df.drop('F008021', axis=1)\n",
@@ -168,11 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "a21611d0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculo do imc, mas eu provavelmente vou mudar ele de lugar, pois precisamos inputar primeiro\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "# Calculando o IMC (peso / altura²) e convertendo altura de cm para metros\n",
@@ -270,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "ebcd700f",
    "metadata": {},
    "outputs": [
@@ -283,6 +288,8 @@
     }
    ],
    "source": [
+    "# Remoção dos registros vazios do atributo Morador selecionado está apto para responder? \n",
+    "\n",
     "# Total de registros antes de remover\n",
     "total_antes = len(df)\n",
     "\n",
@@ -311,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "f28fbf18",
    "metadata": {},
    "outputs": [
@@ -324,6 +331,8 @@
     }
    ],
    "source": [
+    "#Peso final tinha alguns registros em branco, então eu retirei eles\n",
+    "\n",
     "# Total de registros antes de remover\n",
     "total_antes = len(df)\n",
     "\n",
@@ -365,11 +374,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "a2c0e7ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Criando a nova coluna com consumo de verduras e frutas por semana\n",
     "df['consumo_frutas_verduras'] = df['P00901'].astype(str) + ' ' + df['P018'].astype(str)"
    ]
   },
@@ -407,22 +417,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "fed22af2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropei os atributos usados anteriormente\n",
     "df = df.drop('P00901', axis=1)\n",
     "df = df.drop('P018', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "632d5477",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Criando a nova coluna com consumo de coisas não saudaveis por semana\n",
     "df['consumo_alimentos_nsaudaveis'] = (df['P02001'].astype(str) + ' ' + \n",
     "                          df['P02002'].astype(str) + ' ' + \n",
     "                          df['P02501'].astype(str) + ' ' + \n",
@@ -463,11 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "fa21c7ba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropei os atributos usados anteriormente\n",
     "df = df.drop('P02001', axis=1)\n",
     "df = df.drop('P02002', axis=1)\n",
     "df = df.drop('P02501', axis=1)\n",
