Correção do que restava de faltante

--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -1935,6 +1935,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "05813b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5 = pd.read_csv('..\\\\Bases\\\\Criados\\\\base_plano_cartesiano.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3f76920c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24318, 77)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "770e9937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([], dtype='object')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.columns[df5.isnull().any()]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c986bd49",
    "metadata": {},
