--- a/Códigos/produto_cartesiano.ipynb
+++ b/Códigos/produto_cartesiano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "id": "4a4551df",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "id": "b2ae8773",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "id": "1589ad2b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "id": "6fadcdec",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "id": "8cf5240a",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "id": "6b5905f1",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "id": "123b52db",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "id": "5371348e",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "id": "9c3ca547",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "id": "a42dd85e",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 11,
    "id": "347f43d6",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 12,
    "id": "a4a81c41",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "Name: horas_dispositivos_tv, Length: 24345, dtype: float64"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 13,
    "id": "cc0deeba",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 14,
    "id": "cc1cbc98",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 15,
    "id": "83c8ec00",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "Name: consumo_frutas_verduras, Length: 24345, dtype: object"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 16,
    "id": "d77eb6af",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 17,
    "id": "19f4ccf5",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 18,
    "id": "b4ad4234",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "Name: consumo_alimentos_nsaudaveis, Length: 24345, dtype: object"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 19,
    "id": "78f40162",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 20,
    "id": "a21611d0",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 21,
    "id": "1d684c1c",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "Name: imc, Length: 24345, dtype: float64"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 22,
    "id": "cb3dbe0c",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "Name: faixa_imc, Length: 24345, dtype: object"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 23,
    "id": "f28fbf18",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 24,
    "id": "e7718531",
    "metadata": {},
    "outputs": [
@@ -525,8 +525,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Faixa_ex_fisico    69\n",
-      "dtype: int64\n"
+      "Series([], dtype: float64)\n"
      ]
     }
    ],
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 25,
    "id": "166072b6",
    "metadata": {},
    "outputs": [],
