--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "id": "05813b9b",
    "metadata": {},
    "outputs": [],
@@ -1946,17 +1946,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "3f76920c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24318, 77)"
+       "(24318, 81)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "770e9937",
    "metadata": {},
    "outputs": [
@@ -1977,13 +1977,412 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df5.columns[df5.isnull().any()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a32f6b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Coluna",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Tipo",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "4be071f4-60a5-4685-beb1-05d69675617f",
+       "rows": [
+        [
+         "0",
+         "V0001",
+         "int64"
+        ],
+        [
+         "1",
+         "V0024",
+         "int64"
+        ],
+        [
+         "2",
+         "UPA_PNS",
+         "int64"
+        ],
+        [
+         "3",
+         "V0006_PNS",
+         "int64"
+        ],
+        [
+         "4",
+         "C00301",
+         "float64"
+        ],
+        [
+         "5",
+         "V0026",
+         "int64"
+        ],
+        [
+         "6",
+         "B001",
+         "float64"
+        ],
+        [
+         "7",
+         "C006",
+         "float64"
+        ],
+        [
+         "8",
+         "C008",
+         "float64"
+        ],
+        [
+         "9",
+         "C009",
+         "float64"
+        ],
+        [
+         "10",
+         "C011",
+         "float64"
+        ],
+        [
+         "11",
+         "J001",
+         "float64"
+        ],
+        [
+         "12",
+         "J00101",
+         "float64"
+        ],
+        [
+         "13",
+         "J002",
+         "float64"
+        ],
+        [
+         "14",
+         "J00402",
+         "float64"
+        ],
+        [
+         "15",
+         "J00404",
+         "float64"
+        ],
+        [
+         "16",
+         "J007",
+         "float64"
+        ],
+        [
+         "17",
+         "J00801",
+         "float64"
+        ],
+        [
+         "18",
+         "M00203",
+         "float64"
+        ],
+        [
+         "19",
+         "N010",
+         "float64"
+        ],
+        [
+         "20",
+         "N011",
+         "float64"
+        ],
+        [
+         "21",
+         "N012",
+         "float64"
+        ],
+        [
+         "22",
+         "N016",
+         "float64"
+        ],
+        [
+         "23",
+         "P00104",
+         "float64"
+        ],
+        [
+         "24",
+         "P00404",
+         "float64"
+        ],
+        [
+         "25",
+         "P00901",
+         "float64"
+        ],
+        [
+         "26",
+         "P01101",
+         "float64"
+        ],
+        [
+         "27",
+         "P02001",
+         "float64"
+        ],
+        [
+         "28",
+         "P018",
+         "float64"
+        ],
+        [
+         "29",
+         "P02002",
+         "float64"
+        ],
+        [
+         "30",
+         "P02501",
+         "float64"
+        ],
+        [
+         "31",
+         "P02602",
+         "float64"
+        ],
+        [
+         "32",
+         "P02601",
+         "float64"
+        ],
+        [
+         "33",
+         "P06701",
+         "float64"
+        ],
+        [
+         "34",
+         "P068",
+         "float64"
+        ],
+        [
+         "35",
+         "Q00201",
+         "float64"
+        ],
+        [
+         "36",
+         "Q03001",
+         "float64"
+        ],
+        [
+         "37",
+         "Q060",
+         "float64"
+        ],
+        [
+         "38",
+         "Q06306",
+         "float64"
+        ],
+        [
+         "39",
+         "Q064",
+         "float64"
+        ],
+        [
+         "40",
+         "Q06506",
+         "float64"
+        ],
+        [
+         "41",
+         "Q06507",
+         "float64"
+        ],
+        [
+         "42",
+         "Q06508",
+         "float64"
+        ],
+        [
+         "43",
+         "Q06509",
+         "float64"
+        ],
+        [
+         "44",
+         "Q06601",
+         "float64"
+        ],
+        [
+         "45",
+         "Q067",
+         "float64"
+        ],
+        [
+         "46",
+         "Q068",
+         "float64"
+        ],
+        [
+         "47",
+         "Q11006",
+         "float64"
+        ],
+        [
+         "48",
+         "Q128",
+         "float64"
+        ],
+        [
+         "49",
+         "T001",
+         "float64"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 81
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coluna</th>\n",
+       "      <th>Tipo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>V0001</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>V0024</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UPA_PNS</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>V0006_PNS</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C00301</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Doses_semanais</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Quant_doses_alcool_semanal</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>horas_dispositivos_tv</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>imc</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>faixa_imc</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Coluna     Tipo\n",
+       "0                        V0001    int64\n",
+       "1                        V0024    int64\n",
+       "2                      UPA_PNS    int64\n",
+       "3                    V0006_PNS    int64\n",
+       "4                       C00301  float64\n",
+       "..                         ...      ...\n",
+       "76              Doses_semanais  float64\n",
+       "77  Quant_doses_alcool_semanal   object\n",
+       "78       horas_dispositivos_tv  float64\n",
+       "79                         imc  float64\n",
+       "80                   faixa_imc   object\n",
+       "\n",
+       "[81 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tipos_df = pd.DataFrame({\n",
+    "    'Coluna': df5.columns,\n",
+    "    'Tipo': df5.dtypes.values\n",
+    "})\n",
+    "tipos_df\n"
    ]
   },
   {
