po nem eu sei oq eu arrumei aq

--- a/Códigos/6_codificacao.ipynb
+++ b/Códigos/6_codificacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 112,
    "id": "02f747be",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 113,
    "id": "4a132691",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 114,
    "id": "217852db",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "(array([1., 2.]), array([ 1663, 22655]))"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 115,
    "id": "21e31882",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "<Axes: xlabel='Q06306', ylabel='count'>"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 116,
    "id": "8d68a3c5",
    "metadata": {},
    "outputs": [
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "id": "5d3ec3b7",
+   "execution_count": 117,
+   "id": "6c0401d0",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "aa28dc24-676b-407d-a882-4fcf8068bd5b",
+       "ref": "5bd09a83-bdc8-468c-a875-407542be3690",
        "rows": [
         [
          "0",
@@ -433,7 +433,7 @@
        "[24318 rows x 1 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 118,
+   "id": "5d3ec3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "faixa_imc",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "7ac809c2-2326-4da9-a645-5966723b16e8",
+       "rows": [
+        [
+         "0",
+         "Sobrepeso"
+        ],
+        [
+         "1",
+         "Obesidade Grau I"
+        ],
+        [
+         "2",
+         "Obesidade Grau II"
+        ],
+        [
+         "3",
+         "Sobrepeso"
+        ],
+        [
+         "4",
+         "Sobrepeso"
+        ],
+        [
+         "5",
+         "Obesidade Grau I"
+        ],
+        [
+         "6",
+         "Sobrepeso"
+        ],
+        [
+         "7",
+         "Peso normal"
+        ],
+        [
+         "8",
+         "Peso normal"
+        ],
+        [
+         "9",
+         "Peso normal"
+        ],
+        [
+         "10",
+         "Sobrepeso"
+        ],
+        [
+         "11",
+         "Peso normal"
+        ],
+        [
+         "12",
+         "Obesidade Grau I"
+        ],
+        [
+         "13",
+         "Obesidade Grau II"
+        ],
+        [
+         "14",
+         "Sobrepeso"
+        ],
+        [
+         "15",
+         "Peso normal"
+        ],
+        [
+         "16",
+         "Peso normal"
+        ],
+        [
+         "17",
+         "Sobrepeso"
+        ],
+        [
+         "18",
+         "Sobrepeso"
+        ],
+        [
+         "19",
+         "Peso normal"
+        ],
+        [
+         "20",
+         "Sobrepeso"
+        ],
+        [
+         "21",
+         "Sobrepeso"
+        ],
+        [
+         "22",
+         "Peso normal"
+        ],
+        [
+         "23",
+         "Peso normal"
+        ],
+        [
+         "24",
+         "Peso normal"
+        ],
+        [
+         "25",
+         "Peso normal"
+        ],
+        [
+         "26",
+         "Obesidade Grau I"
+        ],
+        [
+         "27",
+         "Peso normal"
+        ],
+        [
+         "28",
+         "Peso normal"
+        ],
+        [
+         "29",
+         "Obesidade Grau I"
+        ],
+        [
+         "30",
+         "Sobrepeso"
+        ],
+        [
+         "31",
+         "Peso normal"
+        ],
+        [
+         "32",
+         "Peso normal"
+        ],
+        [
+         "33",
+         "Peso normal"
+        ],
+        [
+         "34",
+         "Peso normal"
+        ],
+        [
+         "35",
+         "Sobrepeso"
+        ],
+        [
+         "36",
+         "Sobrepeso"
+        ],
+        [
+         "37",
+         "Peso normal"
+        ],
+        [
+         "38",
+         "Peso normal"
+        ],
+        [
+         "39",
+         "Sobrepeso"
+        ],
+        [
+         "40",
+         "Sobrepeso"
+        ],
+        [
+         "41",
+         "Sobrepeso"
+        ],
+        [
+         "42",
+         "Obesidade Grau I"
+        ],
+        [
+         "43",
+         "Sobrepeso"
+        ],
+        [
+         "44",
+         "Obesidade Grau I"
+        ],
+        [
+         "45",
+         "Obesidade Grau I"
+        ],
+        [
+         "46",
+         "Sobrepeso"
+        ],
+        [
+         "47",
+         "Sobrepeso"
+        ],
+        [
+         "48",
+         "Peso normal"
+        ],
+        [
+         "49",
+         "Sobrepeso"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 24318
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>faixa_imc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sobrepeso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Obesidade Grau I</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Obesidade Grau II</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sobrepeso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sobrepeso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24313</th>\n",
+       "      <td>Peso normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24314</th>\n",
+       "      <td>Peso normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24315</th>\n",
+       "      <td>Peso normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24316</th>\n",
+       "      <td>Sobrepeso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24317</th>\n",
+       "      <td>Obesidade Grau I</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24318 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               faixa_imc\n",
+       "0              Sobrepeso\n",
+       "1       Obesidade Grau I\n",
+       "2      Obesidade Grau II\n",
+       "3              Sobrepeso\n",
+       "4              Sobrepeso\n",
+       "...                  ...\n",
+       "24313        Peso normal\n",
+       "24314        Peso normal\n",
+       "24315        Peso normal\n",
+       "24316          Sobrepeso\n",
+       "24317   Obesidade Grau I\n",
+       "\n",
+       "[24318 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base[[\"faixa_imc\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "id": "ab732d22",
    "metadata": {},
    "outputs": [
@@ -452,7 +780,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bkser\\AppData\\Local\\Temp\\ipykernel_13296\\1027575936.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_3836\\1027575936.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  base[\"faixa_imc\"] = base[\"faixa_imc\"].replace(mapeamento).astype(int)\n"
      ]
     },
@@ -472,7 +800,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e51b9b0b-4ba7-437e-b1e8-0e0874b3bac7",
+       "ref": "635f544c-32f0-49c4-9ae3-ee1e720d6c75",
        "rows": [
         [
          "0",
@@ -769,7 +1097,7 @@
        "[24318 rows x 1 columns]"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 120,
    "id": "9cd24598",
    "metadata": {},
    "outputs": [],
@@ -821,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 121,
    "id": "9bcfe9b9",
    "metadata": {},
    "outputs": [
@@ -840,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 122,
    "id": "dd4309f1",
    "metadata": {},
    "outputs": [],
@@ -864,7 +1192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 123,
+   "id": "8cea8cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = base.drop('Dor_peito', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "id": "280b3096",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1642,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "851444ef-cb9e-4027-8687-0b60775c2d66",
+       "ref": "14ddaaf4-d5b4-43e5-804c-ab17b5bebbe8",
        "rows": [
         [
          "0",
@@ -6106,13 +6444,24 @@
        "[24318 rows x 85 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "base_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "ee8435a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Salvar em um novo CSV (opcional)\n",
+    "base.to_csv('../Bases/Criados/base_codificacao.csv', index=False)"
    ]
   },
   {
@@ -6125,7 +6474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 126,
    "id": "bdefee6e",
    "metadata": {},
    "outputs": [],
@@ -6136,7 +6485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 127,
    "id": "cb27b3ef",
    "metadata": {},
    "outputs": [],
@@ -6146,7 +6495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 128,
    "id": "67ac599f",
    "metadata": {},
    "outputs": [
@@ -6581,7 +6930,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d1ca3ea2-9458-4501-b3c7-0f0fdf4237a6",
+       "ref": "20e9d937-fe5c-4b97-be94-abdf614a26b8",
        "rows": [
         [
          "0",
@@ -11333,7 +11682,7 @@
        "[24318 rows x 84 columns]"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11344,7 +11693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 129,
    "id": "2f0b5889",
    "metadata": {},
    "outputs": [
@@ -11365,7 +11714,7 @@
        "Name: Q06306, Length: 24318, dtype: float64"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11376,7 +11725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 130,
    "id": "bc5c6f2d",
    "metadata": {},
    "outputs": [
@@ -11386,7 +11735,7 @@
        "(24318,)"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11397,7 +11746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 131,
    "id": "8e1d5fe8",
    "metadata": {},
    "outputs": [],
@@ -11408,7 +11757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 132,
    "id": "e5187adc",
    "metadata": {},
    "outputs": [
@@ -11418,7 +11767,7 @@
        "(19454, 84)"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11429,7 +11778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 133,
    "id": "f35567f6",
    "metadata": {},
    "outputs": [
@@ -11439,7 +11788,7 @@
        "(4864, 84)"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11450,7 +11799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 134,
    "id": "c7eedf75",
    "metadata": {},
    "outputs": [
@@ -11885,7 +12234,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b60f3f17-a48b-4cc6-9dab-9bef9b361582",
+       "ref": "b2f552af-85b8-407d-b01e-f3c0a0d0ee8e",
        "rows": [
         [
          "1227",
@@ -16637,7 +16986,7 @@
        "[4864 rows x 84 columns]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16648,7 +16997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 135,
    "id": "0b7822a0",
    "metadata": {},
    "outputs": [
@@ -16669,7 +17018,7 @@
        "Name: Q06306, Length: 19454, dtype: float64"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16680,7 +17029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 136,
    "id": "a627b1e1",
    "metadata": {},
    "outputs": [
@@ -16701,7 +17050,7 @@
        "Name: Q06306, Length: 4864, dtype: float64"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
