--- a/Códigos/2_tratamento_outliers.ipynb
+++ b/Códigos/2_tratamento_outliers.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base =  pd.read_csv('..\\\\Bases\\\\Criados\\\\base_outliers.csv')"
+    "base =  pd.read_csv('..\\\\Bases\\\\Criados\\\\1_base_outliers.csv')"
    ]
   },
   {
@@ -798,7 +798,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "37547314-fe32-4ff6-9f0d-71d85f94458e",
+       "ref": "bf433089-8c7d-408c-a2ca-b7e8486782d6",
        "rows": [
         [
          "658",
@@ -6467,7 +6467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv('..\\\\Bases\\\\Criados\\\\base_sem_outliers.csv', index=False)"
+    "base.to_csv('..\\\\Bases\\\\Criados\\\\2_base_sem_outliers.csv', index=False)"
    ]
   }
  ],
