--- a/Códigos/3.2_produto_cartesiano.ipynb
+++ b/Códigos/3.2_produto_cartesiano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "id": "4a4551df",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "id": "b2ae8773",
    "metadata": {},
    "outputs": [],
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "id": "5e21af81",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop(columns=['B001', 'E006011', 'E008', 'J01101', 'M00203', 'P02001', 'P02002','P02501', 'P02602', 'P06701', 'T001', 'H001', 'H002', 'H003', 'H004','H010', 'N00101',\n",
     "                      'Temporariamente_afastado', 'Mobilidade_auxiliar', 'Exposicao_quimica', 'Exposicao_ruido', 'Exposicao_lixo', 'Exposicao_minerio', 'Doses_semanais',\n",
-    "                      'Avaliacao_plano', 'Plano_publico', 'Cobertura_plano'])"
+    "                      'Plano_publico', 'Cobertura_plano', 'P068', 'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311'])"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "id": "b66c44d8",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "id": "29037b65",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 6,
    "id": "315e9d23",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 7,
    "id": "7329fc19",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "id": "70a752f8",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "id": "07cac79c",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 10,
    "id": "f45a04b6",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 11,
    "id": "ba76bfae",
    "metadata": {},
    "outputs": [],
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "id": "5ea56678",
    "metadata": {},
    "outputs": [],
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 13,
    "id": "21ee359d",
    "metadata": {},
    "outputs": [],
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "id": "c80c08a9",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 15,
    "id": "56d892d2",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 16,
    "id": "3d4aa60d",
    "metadata": {},
    "outputs": [],
